# multimodal-rag-samples

./: .env.template  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
src/multimodal-rag/chains/: simple_completion.py
src/multimodal-rag/samples/: extract_pdf.py  simple_completion.py  simple_gemini_ocr.py  simple_gemini_transcription copy.py  simple_openai_transcription.py
